--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,23 @@ textarea {
     resize: none;
     margin-top: 5px;
 }
+label {
+    padding-left: 5px;
+}
+input[type="date"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    line-height: 20px;
+    font-size: 16px;
+    font-weight: inherit;
+    background: #fff;
+    border-radius: 5px;
+    border: 1px solid #bdbdbd;
+}
 .container {
     max-width: 1100px !important;
     padding-left: 15px !important;
