--- a/views/main.pug
+++ b/views/main.pug
@@ -4,4 +4,6 @@ div(class="container")
         h1 Все записи:
         include assets/update-form.pug
         include assets/post-card.pug
+        div(class="post-block_add")
+            h3 Добавить запись
 include assets/scripts.pug
