--- a/views/main.pug
+++ b/views/main.pug
@@ -3,6 +3,7 @@ div(class="container")
     div(class="post-block__wrap")
         h1 Все записи:
         include assets/update-form.pug
+        include assets/add-form.pug
         include assets/post-card.pug
         div(class="post-block_add")
             h3 Добавить запись
